# cmake_package_example

./: CMakeLists.txt  README.md
include/: install_me.h
usage_example/: CMakeLists.txt
usage_example/src/: example.cpp
